# cmake_tutorial

./: README.md
Tutorial1/: A.cpp  B.cpp
Tutorial10/: string_APPEND.cmake  string_CASE.cmake  string_CONCAT.cmake  string_FIND.cmake  string_JOIN.cmake  string_LENGTH.cmake  string_PREPEND.cmake  string_REGEX_MATCH.cmake  string_REGEX_MATCHALL.cmake  string_REGEX_REPLACE.cmake  string_REPEAT.cmake  string_REPLACE.cmake  string_STRIP.cmake  string_SUBSTRING.cmake
Tutorial11/: ex1.cmake  ex10.cmake  ex11.cmake  ex12.cmake  ex13.cmake  ex14.cmake  ex2.cmake  ex3.cmake  ex4.cmake  ex5.cmake  ex6.cmake  ex7.cmake  ex8.cmake  ex9.cmake
Tutorial12/: ex1.cmake  ex2.cmake  ex3.cmake
Tutorial13/: ex1.cmake  ex2.cmake  ex3.cmake  ex4.cmake  ex5.cmake
Tutorial14/: ex1.cmake  ex2.cmake  ex3.cmake  ex4.cmake  ex5.cmake  ex6.cmake  ex7.cmake  ex8.cmake  ex9.cmake
Tutorial15/: CMakeLists.txt
Tutorial16/ex1/: CMakeLists.txt  main.cpp
Tutorial16/ex2/: CMakeLists.txt  Config.h.in
Tutorial16/ex3/: CMakeLists.txt  Config.h.in  main.cpp
Tutorial17/: CMakeLists.txt
Tutorial18/: CMakeLists.txt
Tutorial18/foo/: CMakeLists.txt
Tutorial18/foo/include/: foo.h
Tutorial18/foo/source/: foo.cpp
Tutorial19/: CMakeLists.txt  main.cpp
Tutorial2/: CMakeLists.txt
Tutorial2/Sources/: A.h
Tutorial20/: CMakeLists.txt
Tutorial20/foo/: CMakeLists.txt
Tutorial21/: CMakeLists.txt
Tutorial21/foo/: CMakeLists.txt
Tutorial22/: test1.cmake  test2.cmake  test3.cmake  test4.cmake  test5.cmake  test6.cmake
Tutorial4/: CMakeLists.txt  main.cpp
Tutorial4/foo/: foo.cpp
Tutorial5/: CMakeLists.txt
Tutorial5/foo/: foo.h
Tutorial6/: CMakeLists.txt  main.cpp
Tutorial6/foo/: foo.cpp  foo.h
Tutorial7/: CMakeLists.txt
Tutorial7/foo/: CMakeLists.txt
Tutorial9_1/: message.cmake
Tutorial9_10/: macro1.cmake  macro2.cmake  macro3.cmake
Tutorial9_2/: lifecycle.cmake  value.cmake  value2.cmake  value3.cmake
Tutorial9_3/: function_scope.cmake
Tutorial9_3/DirectoryScope/: CMakeLists.txt
Tutorial9_3/DirectoryScope/foo/: CMakeLists.txt  foo.cpp
Tutorial9_4/DirectoryScope/: CMakeLists.txt  main.cpp
Tutorial9_4/DirectoryScope/foo/: foo.h
Tutorial9_4/PersistentCache/: CMakeLists.txt
Tutorial9_5/: SystemEnvironment.cmake  SystemEnvironment2.cmake
Tutorial9_6/: if.cmake
Tutorial9_7/: escape.cmake  variable.cmake
Tutorial9_8/: foreach1.cmake  foreach10.cmake  foreach11.cmake  foreach2.cmake  foreach3.cmake  foreach4.cmake  foreach5.cmake  foreach6.cmake  foreach7.cmake  foreach8.cmake  foreach9.cmake
Tutorial9_9/: while.cmake
